Products and Services almost done

--- a/index1.html
+++ b/index1.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a href="index.html">HOME</a> </li>
                     <li><a href="index1.html">ABOUT US</a> </li>
-                    <li><a href="#">PRODUCTS AND SERVICES</a> </li>
+                    <li><a href="index2.html">PRODUCTS AND SERVICES</a> </li>
                     <li><a href="#">E-BANKING</a> </li>
                     <li><a href="#">CONTACT US</a> </li>
                     <li>
@@ -66,7 +66,7 @@
                     <div class="content-box1">
                         <div class="grid-content">
                             <div>
-                                <h3>150 years of uninterrupted banking operations</h3>
+                                <h3>120 years of uninterrupted banking operations</h3>
                             </div>
                             <div>
                             
@@ -213,7 +213,7 @@
 
             </div>
             <div class="footerItems right">
-               <h6>© 2021 WHO</h6>
+               <h6>© 2021 BIX Bank</h6>
             </div>
 
     </div>            
