--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a href="index.html">HOME</a> </li>
                     <li><a href="index1.html">ABOUT US</a> </li>
-                    <li><a href="#">PRODUCTS AND SERVICES</a> </li>
+                    <li><a href="index2.html">PRODUCTS & SERVICES</a> </li>
                     <li><a href="#">E-BANKING</a> </li>
                     <li><a href="#">CONTACT US</a> </li>
                     <li>
