--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="index.html">HOME</a> </li>
                     <li><a href="index1.html">ABOUT US</a> </li>
                     <li><a href="index2.html">PRODUCTS & SERVICES</a> </li>
-                    <li><a href="#">E-BANKING</a> </li>
+                    <li><a href="index3.html">E-BANKING</a> </li>
                     <li><a href="#">CONTACT US</a> </li>
                     <li>
                         <div class="box">
