--- a/index1.html
+++ b/index1.html
@@ -24,7 +24,7 @@
                     <li><a href="index.html">HOME</a> </li>
                     <li><a href="index1.html">ABOUT US</a> </li>
                     <li><a href="index2.html">PRODUCTS AND SERVICES</a> </li>
-                    <li><a href="#">E-BANKING</a> </li>
+                    <li><a href="index3.html">E-BANKING</a> </li>
                     <li><a href="#">CONTACT US</a> </li>
                     <li>
                         <div class="box">
@@ -45,7 +45,7 @@
         
         <div class="content">
             <div class="content-img">
-                <img src="img/UBA-BRAND10b1.jpg" style="width:100%">
+                <img src="img/iStock-509182250.jpg.rendition.1440.1440.jpg" style="width:100%">
                 <div class="text">
                     <h1>About Us</h1>
                     <p>Insights into how we have become Africa's Global. <br>
