--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@
                     <li><a href="index1.html">ABOUT US</a> </li>
                     <li><a href="index2.html">PRODUCTS AND SERVICES</a> </li>
                     <li><a href="index3.html">E-BANKING</a> </li>
-                    <li><a href="#">CONTACT US</a> </li>
+                    <li><a href="index4.html">CONTACT US</a> </li>
                     <li>
                         <div class="box">
                             <input type="text" class="txt" placeholder="Type here">
