contact us page done

--- a/about.html
+++ b/about.html
@@ -70,16 +70,16 @@
                             </div>
                             <div>
                             
-                                <p>Currently, UBA has 19 African subsidiaries, contributing about 20% of the Group’s balance sheet, 
+                                <p>Currently, BIX Bank has 19 African subsidiaries, contributing about 20% of the Group’s balance sheet, 
                                     with a target of contributing 50%. We’re on a quest to build the strongest domestic and African brand.
                                 </p>
                             </div>
                             <div><h3>History</h3>
                                 <br>
                                 <p>
-                                    United Bank for Africa (Ghana) Limited pioneered the entry of a new
+                                    BIX Bank (Ghana) Limited pioneered the entry of a new
                                     generation of foreign banks into the country in January 2005. <br>
-                                    The presence of UBA Ghana in the banking industry in Ghana over the
+                                    The presence of BIX Bank Ghana in the banking industry in Ghana over the
                                     last thirteen years has galvanized banking onto a higher performance
                                     level where competition and innovation in responding to the needs of the
                                     customer have become the driving force of the industry.
@@ -120,7 +120,9 @@
 
                     </div>
                     <div class="grid-container1">
-                        <div>1</div>
+                        <div>
+                            <img src="img/download.jpg" alt="">
+                        </div>
                         <div>2</div>
                         <div>2</div>
                         <div>5</div>
