changes made to the about page

--- a/about.html
+++ b/about.html
@@ -74,7 +74,8 @@
                                     with a target of contributing 50%. We’re on a quest to build the strongest domestic and African brand.
                                 </p>
                             </div>
-                            <div><h3>History</h3>
+                            
+                            <div><br><br><br><br><br><h3>History</h3>
                                 <br>
                                 <p>
                                     BIX Bank (Ghana) Limited pioneered the entry of a new
@@ -87,7 +88,7 @@
                             </div>
                             <div><img src="img/UBA-Background.jpg" ></div>
                             <div><img src="img/UBA-Leadership.jpg"></div>
-                            <div><h3>Leadership</h3>
+                            <div><br><br><br><br><br><h3>Leadership</h3>
                                 <br>
                                 <p>
                                     The management team of the group is made up of a crop of seasoned and
