--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <li><a href="">Current Account Classic</a></li><br>
                                 <li><a href="">Cards</a></li><br>
                                 <li><a href="">Trade Services</a></li><br>
-                                <li><a href="index4.html">Contact</a></li><br>
+                                <li><a href="contact.html">Contact</a></li><br>
                                 <li><a href="">Legal</a></li>
                                                         
                             </ul>
@@ -145,7 +145,7 @@
                             </ul>
                         
                             <ul>
-                                <li><a href="index1.html"><strong>About BIX Bank</strong></a></li><br>
+                                <li><a href="about.html"><strong>About BIX Bank</strong></a></li><br>
                                 <li><a href="">Business Focus</a></li><br>
                                 <li><a href="">BIX History</a></li><br>
                                 <li><a href="">Booard of Directors</a></li><br>
