--- a/e-banking.html
+++ b/e-banking.html
@@ -47,7 +47,7 @@
         <div class="content">
             <div class="content-img">
                 <img src="img/UBA-Digital-Banking.jpg" style="width:100%">
-                <div class="text">
+                <div class="text" id="welcome-msg">
                     <h1>E-Banking</h1>
                     <p>We have a range of retail e-products that allows you <br>
                         to securely and conveniently access your bank account <br>
